[*] fix result jump

--- a/src/components/login-animated-picture/graph/graph.module.scss
+++ b/src/components/login-animated-picture/graph/graph.module.scss
@@ -12,8 +12,8 @@
 
 .image {
 	height: auto;
-	width: math.div(392, 1440) * 100vw;
-	max-width: 100%;
+	// width: math.div(392, 1440) * 100vw;
+	width: 100%;
 }
 
 .lines {
