--- a/src/components/login-animated-picture/login-animated-picture.module.scss
+++ b/src/components/login-animated-picture/login-animated-picture.module.scss
@@ -50,17 +50,18 @@
 
 .wrap {
 	transform-style: preserve-3d;
-	perspective: 100vmin;
+	perspective: 500px;
 	position: relative;
 
 	justify-self: start;
 	transition: transform 1s ease-in-out;
 
 	width: 100%;
-	height: 100%;
-	display: grid;
-	place-content: center start;
-	place-items: center start;
+	margin: auto;
+	// height: 100%;
+	// display: grid;
+	// place-content: center start;
+	// place-items: center start;
 
 	/* For debugging */
 	/* background-color: rgba(tomato, 50%);
@@ -84,29 +85,29 @@
 
 .screen {
 	transition: transform 1s ease-in-out;
-	max-width: 100%;
 	position: relative;
 	left: -3.2vw;
+	width: math.div(711, 840) * 100%;
 }
 
 .result {
 	transition: transform 1s ease-in-out;
 	position: absolute;
-	inset: auto;
+	inset: auto auto 32% 28%;
 	font-size: 1.1vw;
 	transform: scale(0.306)
-		translate3d(calc(var(--ratio-x, 0) * 2vmin + 260%), calc(var(--ratio-y, 0) * 1vmin + 160%), 80vmin)
+		translate3d(calc(var(--ratio-x, 0) * 2vmin), calc(var(--ratio-y, 0) * 1vmin), 400px)
 		rotateX(calc(var(--ratio-y, 0) * -2deg)) rotateY(calc(var(--ratio-x, 0) * -1deg));
 }
 
 .graph {
 	transition: transform 1s ease-in-out;
 	position: absolute;
-	inset: auto;
-	width: 25vw;
+	inset: -3% auto auto 37%;
+	width: 46.6%;
 	height: auto;
-	transform: scale(0.65)
-		translate3d(calc(var(--ratio-y, 0) * -4vmin + 136%), calc(var(--ratio-y, 0) * -4vmin - 70%), 40vmin)
+	transform: scale(0.6)
+		translate3d(calc(var(--ratio-y, 0) * -4vmin), calc(var(--ratio-y, 0) * -4vmin), 200px)
 		rotateX(calc(var(--ratio-y, 0) * -5deg)) rotateY(calc(var(--ratio-x, 0) * -5deg));
 }
 
