--- a/src/components/login-animated-picture/mock-result/mock-data.module.scss
+++ b/src/components/login-animated-picture/mock-result/mock-data.module.scss
@@ -15,7 +15,6 @@
 
 	box-shadow: inset 0 0 1.5em rgba(white, 0.05);
 	color: rgba(82, 82, 82, 1);
-	width: fit-content;
 
 	@include back-blur(3em);
 }
@@ -23,8 +22,9 @@
 .group {
 	display: grid;
 	gap: 0.5em;
+	min-width: 5em;
 	&:not(:last-child) {
-		padding-right: 1em;
+		// padding-right: 1em;
 		border-right: 1px solid rgba(226, 233, 246, 1);
 	}
 }
