--- a/src/components/login-animated-picture/screen/screenshot.module.scss
+++ b/src/components/login-animated-picture/screen/screenshot.module.scss
@@ -20,6 +20,5 @@
 
 .image {
 	height: auto;
-	// width: math.div(712, 1440) * 100vw;
-	max-width: 100%;
+	width: 100%;
 }
